--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/estilo.css">
+
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-  <title>Sort</title>
+  <title>Algoritmos de Ordenação</title>
 </head>
 
 <body class="main">
@@ -23,14 +24,16 @@
     <!--sidebar-->
     <div id="sidebar" class="show">
       <!-- topo -->
-      <div class="text-menu">
-        <span>Algoritmos de Ordenação</span>
-      </div>
+        <a href="pages/page0.html" target="iframe">
+          <div class="subitem text-menu selected">
+            <span>Algoritmos de Ordenação</span>
+          </div>
+        </a>
       <!-- introdução -->
       <div class="option-submenu">
-        <div class="option">
+        <div class="option clicked">
           <span class="label">Introdução</span>
-          <div class="button expand clicked">
+          <div class="button expand">
             <span class="material-symbols-outlined">expand_more</span>
           </div>
         </div>
@@ -38,7 +41,7 @@
         <div class="submenu show">
           <ul>
             <li>
-              <a class="principal" href="pages/page1.html" target="iframe">
+              <a class="" href="pages/page1.html" target="iframe">
                 <div class="subitem">
                   <span class="label">Gráfico geral</span>
                   <span class="material-symbols-outlined">dataset</span>
@@ -46,7 +49,7 @@
               </a>
             </li>
             <li>
-              <a class="principal" href="pages/page2.html" target="iframe">
+              <a class="" href="pages/page2.html" target="iframe">
                 <div class="subitem">
                   <span class="label">Tabela geral</span>
                   <span class="material-symbols-outlined">dataset</span>
@@ -64,10 +67,10 @@
             <span class="material-symbols-outlined">expand_more</span>
           </div>
         </div>
-        <div class="submenu">
+        <div class="submenu" id="bubbleSort">
           <ul>
             <li>
-              <a href="pages/page3.html" target="iframe" class="btnGraph">
+              <a href="pages/page3.html" target="iframe" class="btnSub">
                 <div class="subitem">
                   <span class="label">Gráfico</span>
                   <span class="material-symbols-outlined">dataset</span>
@@ -75,7 +78,7 @@
               </a>
             </li>
             <li>
-              <a href="pages/page4.html" target="iframe" class="btnTable" id="bubbleSort">
+              <a href="pages/page4.html" target="iframe" class="btnSub">
                 <div class="subitem">
                   <span class="label">Tabela</span>
                   <span class="material-symbols-outlined">dataset</span>
@@ -93,10 +96,10 @@
             <span class="material-symbols-outlined">expand_more</span>
           </div>
         </div>
-        <div class="submenu">
+        <div class="submenu" id="selectionSort">
           <ul>
             <li>
-              <a href="pages/page3.html" target="iframe" class="btnGraph">
+              <a href="pages/page3.html" target="iframe" class="btnSub">
                 <div class="subitem">
                   <span class="label">Gráfico</span>
                   <span class="material-symbols-outlined">dataset</span>
@@ -104,7 +107,7 @@
               </a>
             </li>
             <li>
-              <a href="pages/page4.html" target="iframe" class="btnTable" id="selectionSort">
+              <a href="pages/page4.html" target="iframe" class="btnSub">
                 <div class="subitem">
                   <span class="label">Tabela</span>
                   <span class="material-symbols-outlined">dataset</span>
@@ -122,10 +125,10 @@
             <span class="material-symbols-outlined">expand_more</span>
           </div>
         </div>
-        <div class="submenu">
+        <div class="submenu" id="insertionSort">
           <ul>
             <li>
-              <a href="pages/page3.html" target="iframe" class="btnGraph">
+              <a href="pages/page3.html" target="iframe" class="btnSub">
                 <div class="subitem">
                   <span class="label">Gráfico</span>
                   <span class="material-symbols-outlined">dataset</span>
@@ -133,7 +136,7 @@
               </a>
             </li>
             <li>
-              <a href="pages/page4.html" target="iframe" class="btnTable" id="insertionSort">
+              <a href="pages/page4.html" target="iframe" class="btnSub">
                 <div class="subitem">
                   <span class="label">Tabela</span>
                   <span class="material-symbols-outlined">dataset</span>
@@ -151,10 +154,10 @@
             <span class="material-symbols-outlined">expand_more</span>
           </div>
         </div>
-        <div class="submenu">
+        <div class="submenu" id="mergeSort">
           <ul>
             <li>
-              <a href="pages/page3.html" target="iframe" class="btnGraph">
+              <a href="pages/page3.html" target="iframe" class="btnSub">
                 <div class="subitem">
                   <span class="label">Gráfico</span>
                   <span class="material-symbols-outlined">dataset</span>
@@ -162,7 +165,7 @@
               </a>
             </li>
             <li>
-              <a href="pages/page4.html" target="iframe" class="btnTable" id="mergeSort">
+              <a href="pages/page4.html" target="iframe" class="btnSub">
                 <div class="subitem">
                   <span class="label">Tabela</span>
                   <span class="material-symbols-outlined">dataset</span>
@@ -180,10 +183,10 @@
             <span class="material-symbols-outlined">expand_more</span>
           </div>
         </div>
-        <div class="submenu">
+        <div class="submenu" id="quickSort">
          <ul>
             <li>
-              <a href="pages/page3.html" target="iframe" class="btnGraph">
+              <a href="pages/page3.html" target="iframe" class="btnSub">
                 <div class="subitem">
                   <span class="label">Gráfico</span>
                   <span class="material-symbols-outlined">dataset</span>
@@ -191,7 +194,7 @@
               </a>
             </li>
             <li>
-              <a href="pages/page4.html" target="iframe" class="btnTable" id="quickSort">
+              <a href="pages/page4.html" target="iframe" class="btnSub">
                 <div class="subitem">
                   <span class="label">Tabela</span>
                   <span class="material-symbols-outlined">dataset</span>
@@ -209,10 +212,10 @@
             <span class="material-symbols-outlined">expand_more</span>
           </div>
         </div>
-        <div class="submenu">
+        <div class="submenu" id="shellSort">
          <ul>
             <li>
-              <a href="pages/page3.html" target="iframe" class="btnGraph">
+              <a href="pages/page3.html" target="iframe" class="btnSub">
                 <div class="subitem">
                   <span class="label">Gráfico</span>
                   <span class="material-symbols-outlined">dataset</span>
@@ -220,7 +223,7 @@
               </a>
             </li>
             <li>
-              <a href="pages/page4.html" target="iframe" class="btnTable" id="shellSort">
+              <a href="pages/page4.html" target="iframe" class="btnSub">
                 <div class="subitem">
                   <span class="label">Tabela</span>
                   <span class="material-symbols-outlined">dataset</span>
@@ -239,10 +242,10 @@
             <span class="material-symbols-outlined">expand_more</span>
           </div>
         </div>
-        <div class="submenu">
+        <div class="submenu" id="heapSort">
          <ul>
             <li>
-              <a href="pages/page3.html" target="iframe" class="btnGraph">
+              <a href="pages/page3.html" target="iframe" class="btnSub">
                 <div class="subitem">
                   <span class="label">Gráfico</span>
                   <span class="material-symbols-outlined">dataset</span>
@@ -250,7 +253,7 @@
               </a>
             </li>
             <li>
-              <a href="pages/page4.html" target="iframe" class="btnTable" id="heapSort">
+              <a href="pages/page4.html" target="iframe" class="btnSub">
                 <div class="subitem">
                   <span class="label">Tabela</span>
                   <span class="material-symbols-outlined">dataset</span>
@@ -270,10 +273,10 @@
             <span class="material-symbols-outlined">expand_more</span>
           </div>
         </div>
-        <div class="submenu">
+        <div class="submenu" id="radixSort">
          <ul>
             <li>
-              <a href="pages/page3.html" target="iframe" class="btnGraph">
+              <a href="pages/page3.html" target="iframe" class="btnSub">
                 <div class="subitem">
                   <span class="label">Gráfico</span>
                   <span class="material-symbols-outlined">dataset</span>
@@ -281,7 +284,7 @@
               </a>
             </li>
             <li>
-              <a href="pages/page4.html" target="iframe" class="btnTable" id="radixSort">
+              <a href="pages/page4.html" target="iframe" class="btnSub">
                 <div class="subitem">
                   <span class="label">Tabela</span>
                   <span class="material-symbols-outlined">dataset</span>
@@ -300,10 +303,10 @@
             <span class="material-symbols-outlined">expand_more</span>
           </div>
         </div>
-        <div class="submenu">
+        <div class="submenu" id="gnomeSort">
          <ul>
             <li>
-              <a href="pages/page3.html" target="iframe" class="btnGraph">
+              <a href="pages/page3.html" target="iframe" class="btnSub">
                 <div class="subitem">
                   <span class="label">Gráfico</span>
                   <span class="material-symbols-outlined">dataset</span>
@@ -311,7 +314,7 @@
               </a>
             </li>
             <li>
-              <a href="pages/page4.html" target="iframe" class="btnTable" id="gnomeSort">
+              <a href="pages/page4.html" target="iframe" class="btnSub">
                 <div class="subitem">
                   <span class="label">Tabela</span>
                   <span class="material-symbols-outlined">dataset</span>
@@ -330,10 +333,10 @@
             <span class="material-symbols-outlined">expand_more</span>
           </div>
         </div>
-        <div class="submenu">
+        <div class="submenu" id="countingSort">
          <ul>
             <li>
-              <a href="pages/page3.html" target="iframe" class="btnGraph">
+              <a href="pages/page3.html" target="iframe" class="btnSub">
                 <div class="subitem">
                   <span class="label">Gráfico</span>
                   <span class="material-symbols-outlined">dataset</span>
@@ -341,7 +344,7 @@
               </a>
             </li>
             <li>
-              <a href="pages/page4.html" target="iframe" class="btnTable" id="countingSort">
+              <a href="pages/page4.html" target="iframe" class="btnSub">
                 <div class="subitem">
                   <span class="label">Tabela</span>
                   <span class="material-symbols-outlined">dataset</span>
@@ -354,13 +357,13 @@
     </div>
   
     <!--iframe -->
-    <iframe id="iframe" src="pages/page2.html" name="iframe"></iframe>
+    <iframe id="iframe" src="/pages/page0.html" name="iframe"></iframe>
   
     <!-- lateral -->
-    <div class="lateral show">
+    <div class="lateral">
       <div id="btn-lad">
         <span class="material-symbols-outlined">
-        keyboard_double_arrow_right
+        keyboard_double_arrow_left
         </span>
       </div>
       <div id="text-lad">
